--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <script defer src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script defer type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60fd70a240ae2e40"></script>
+
   <script defer src="./main.js"></script>
 </head>
 <body>
@@ -34,13 +38,17 @@
       <img id="img" class="rounded-circle mt-5" src="https://image.freepik.com/free-vector/roaring-lion-logo_7688-483.jpg" alt="">
       <h2 id="animal" class=" text-center mt-5">동물이름</h2>
       <h3 id="explan" class=" text-center mt-5">설명</h3>
-    </article>
 
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+      <div class="share addthis_inline_share_toolbox"></div>
+    </article>
+          
     <input type="hidden" id="EI" value="0">
     <input type="hidden" id="SN" value="0">
     <input type="hidden" id="TF" value="0">
     <input type="hidden" id="JP" value="0">
     
   </div>
+
 </body>
 </html>
