--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
       <div class="share addthis_inline_share_toolbox"></div>
     </article>
 
-    <ins class="kakao_ad_area" style="display:none;" 
-    data-ad-unit    = "DAN-eyhEHUyejl7Gjy8K" 
-    data-ad-width   = "320" 
-    data-ad-height  = "100"></ins> 
+    <article class="kakao_ad mt-5">
+      <ins class="kakao_ad_area" style="display:none;" 
+      data-ad-unit    = "DAN-eyhEHUyejl7Gjy8K" 
+      data-ad-width   = "320" 
+      data-ad-height  = "100"></ins> 
+    </article>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
           
     <input type="hidden" id="EI" value="0">
